Move visgrid to top level and fix imports

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = markov_abstr/dmcontrol
 	url = ../rad.git
 [submodule "markov_abstr/gridworld/visgrid"]
-	path = markov_abstr/gridworld/visgrid
+	path = visgrid
 	url = ../visgrid.git
