--- a/factored_rl/experiments/conf/agent/model/cnn_beta_vae_64.yaml
+++ b/factored_rl/experiments/conf/agent/model/cnn_beta_vae_64.yaml
@@ -1,6 +1,7 @@
 defaults:
   - base_cnn
 
+name: cnn_beta_vae_64
 supported_2d_input_shape: [64, 64]
 n_output_channels: [32, 32, 64, 64]
 kernel_sizes: 4
