--- a/factored_rl/experiments/conf/agent/model/cnn_dqn_84.yml
+++ b/factored_rl/experiments/conf/agent/model/cnn_dqn_84.yml
@@ -1,6 +1,7 @@
 defaults:
   - base_cnn
 
+name: cnn_dqn_84
 supported_2d_input_shape: [84, 84]
 n_output_channels: [32, 64, 64]
 kernel_sizes: [8, 4, 3]
