Add taxi args to yaml

--- a/factored_rl/experiments/conf/env/taxi.yaml
+++ b/factored_rl/experiments/conf/env/taxi.yaml
@@ -4,3 +4,6 @@ defaults:
 name: taxi
 n_training_episodes: 10000
 n_steps_per_episode: 50
+exploring_starts: true
+fixed_goal: false
+depot_dropoff_only: true
