--- a/factored_rl/experiments/conf/config.yaml
+++ b/factored_rl/experiments/conf/config.yaml
@@ -1,8 +1,10 @@
 defaults:
   - _self_
   - base_config
-  - env: base_env
   - agent: base_agent
+  - env: base_env
+  - model: base_model
+  - trainer: base_trainer
   - transform: base_transform
 
 debug: true
