--- a/factored_rl/experiments/conf/model/cnn_10.yaml
+++ b/factored_rl/experiments/conf/model/cnn_10.yaml
@@ -1,12 +1,12 @@
 defaults:
-  - base_cnn
+  - cnn_relu
 
 name: cnn_10
-supported_2d_input_shape: [10, 10]
-n_output_channels: [8, 16, 32]
-kernel_sizes: [4, 3, 2]
-strides: [2, 1, 1]
-n_hidden_layers: 1
-n_units_per_layer: 64
-activation:
-  _target_: torch.nn.ReLU
+cnn:
+  supported_2d_input_shape: [10, 10]
+  n_output_channels: [8, 16, 32]
+  kernel_sizes: [4, 3, 2]
+  strides: [2, 1, 1]
+mlp:
+  n_hidden_layers: 1
+  n_units_per_layer: 64
