--- a/factored_rl/experiments/conf/model/cnn_64.yaml
+++ b/factored_rl/experiments/conf/model/cnn_64.yaml
@@ -1,12 +1,12 @@
 defaults:
-  - base_cnn
+  - cnn_relu
 
 name: cnn_64
-supported_2d_input_shape: [64, 64]
-n_output_channels: [16, 16, 16, 16]
-kernel_sizes: 4
-strides: 2
-n_hidden_layers: 1
-n_units_per_layer: 64
-activation:
-  _target_: torch.nn.ReLU
+cnn:
+  supported_2d_input_shape: [64, 64]
+  n_output_channels: [16, 16, 16, 16]
+  kernel_sizes: 4
+  strides: 2
+mlp:
+  n_hidden_layers: 1
+  n_units_per_layer: 64
