--- a/factored_rl/experiments/conf/model/cnn_dqn_84.yml
+++ b/factored_rl/experiments/conf/model/cnn_dqn_84.yml
@@ -1,12 +1,12 @@
 defaults:
-  - base_cnn
+  - cnn_relu
 
 name: cnn_dqn_84
-supported_2d_input_shape: [84, 84]
-n_output_channels: [32, 64, 64]
-kernel_sizes: [8, 4, 3]
-strides: [4, 2, 1]
-n_hidden_layers: 1
-n_units_per_layer: 512
-activation:
-  _target_: torch.nn.ReLU
+cnn:
+  supported_2d_input_shape: [84, 84]
+  n_output_channels: [32, 64, 64]
+  kernel_sizes: [8, 4, 3]
+  strides: [4, 2, 1]
+mlp:
+  n_hidden_layers: 1
+  n_units_per_layer: 512
