--- a/factored_rl/experiments/conf/model/mlp.yaml
+++ b/factored_rl/experiments/conf/model/mlp.yaml
@@ -1,8 +1,12 @@
 defaults:
-  - base_mlp
+  - base_model
 
 name: mlp
-n_hidden_layers: 1
-n_units_per_layer: 64
-activation:
-  _target_: torch.nn.Tanh
+architecture: mlp
+flatten_input: true
+mlp:
+  n_hidden_layers: 1
+  n_units_per_layer: 64
+  activation:
+    _target_: torch.nn.Tanh
+  final_activation: null
