--- a/factored_rl/experiments/conf/model/vae_64.yaml
+++ b/factored_rl/experiments/conf/model/vae_64.yaml
@@ -2,6 +2,7 @@ defaults:
   - cnn_relu
 
 name: vae_64
+architecture: ae
 cnn:
   supported_2d_input_shape: [64, 64]
   n_output_channels: [32, 32, 64, 64]
