Make architecture either cnn or mlp; rename vae_64 -> betavae

--- a/factored_rl/experiments/conf/model/ae_64.yaml
+++ b/factored_rl/experiments/conf/model/ae_64.yaml
@@ -2,7 +2,7 @@ defaults:
   - cnn_relu
 
 name: ae_64
-architecture: ae
+architecture: cnn
 cnn:
   supported_2d_input_shape: [64, 64]
   n_output_channels: [16, 16, 16, 16]
