--- a/factored_rl/experiments/conf/model/betavae.yaml
+++ b/factored_rl/experiments/conf/model/betavae.yaml
@@ -1,8 +1,8 @@
 defaults:
   - cnn_relu
 
-name: vae_64
-architecture: ae
+name: betavae
+architecture: cnn
 cnn:
   supported_2d_input_shape: [64, 64]
   n_output_channels: [32, 32, 64, 64]
