--- a/factored_rl/experiments/conf/trainer/full.yaml
+++ b/factored_rl/experiments/conf/trainer/full.yaml
@@ -10,6 +10,7 @@ max_steps: 2000
 num_dataloader_workers: 2
 optimizer:
   _target_: torch.optim.AdamW
+  _partial_: true
 overfit_batches: 0
 persistent_workers: true
 quick: false
