Prevent hydra from saving files in project folder

--- a/factored_rl/experiments/conf/config.yaml
+++ b/factored_rl/experiments/conf/config.yaml
@@ -8,3 +8,9 @@ defaults:
   - transform: base_transform
 
 debug: true
+hydra:
+  job:
+    chdir: false
+  output_subdir: null
+  run:
+    dir: /tmp
