Split architecture.name into arch.{encoder,decoder,predictor}

--- a/factored_rl/experiments/conf/model/ae/ae_mlp.yaml
+++ b/factored_rl/experiments/conf/model/ae/ae_mlp.yaml
@@ -1,10 +1,10 @@
 defaults:
-  - cnn_64
+  - mlp
 
-name: ae_cnn_64
+name: ae_mlp
 arch:
-  encoder: cnn
-  decoder: cnn
+  encoder: mlp
+  decoder: mlp
 action_sampling: null
 ae:
   n_latent_dims: 10
