Refactor loss hyperparams

--- a/factored_rl/experiments/conf/config.yaml
+++ b/factored_rl/experiments/conf/config.yaml
@@ -4,8 +4,7 @@ defaults:
   - agent: base_agent
   - env: base_env
   - model: base_model
-  - loss@losses.sparsity: base_loss
-  - loss@losses.vae: base_loss
+  - loss: default_loss
   - trainer: base_trainer
   - transform: base_transform
 
@@ -16,10 +15,3 @@ hydra:
   output_subdir: null
   run:
     dir: /tmp
-loss:
-  effects: 0.0
-  actions: 0.0
-  reconst: 1.0
-  predict: 0.0
-  parents: 0.0
-  distance: mse
