--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 absl-py==1.2.0
 aiohttp==3.8.1
 aiosignal==1.2.0
+alembic==1.8.1
 antlr4-python3-runtime==4.9.3
 appnope==0.1.0
 argon2-cffi==20.1.0
 async-generator==1.10
 async-timeout==4.0.2
 attrs==22.1.0
+autopage==0.5.1
 backcall==0.2.0
 bleach==3.2.1
 cached-property==1.5.2
@@ -17,7 +19,10 @@ cffi==1.14.3
 chardet==3.0.4
 charset-normalizer==2.1.0
 click==8.0.4
+cliff==4.1.0
 cloudpickle==2.1.0
+cmaes==0.9.0
+cmd2==2.4.2
 colorama==0.4.5
 colorlog==6.6.0
 coverage==6.4.2
@@ -46,8 +51,10 @@ gmpy==1.17
 google-auth==2.9.1
 google-auth-oauthlib==0.4.6
 graphviz==0.14.1
+greenlet==2.0.1
 grpcio==1.43.0
 gym==0.26.0
+gym-notices==0.0.8
 h5py==3.7.0
 hydra-colorlog==1.1.0
 hydra-core==1.2.0
@@ -74,6 +81,7 @@ kiwisolver==1.4.4
 labmaze==1.0.3
 llvmlite==0.39.0
 lxml==4.6.2
+Mako==1.2.4
 Markdown==3.4.1
 MarkupSafe==2.1.1
 matplotlib==3.5.2
@@ -93,18 +101,21 @@ oauthlib==3.2.0
 omegaconf==2.2.3
 onager==0.1.3
 opencv-python==4.4.0.46
+optuna==3.0.3
 packaging==21.3
 pandas==1.4.3
 pandocfilters==1.4.2
 parso==0.7.1
 pathtools==0.1.2
 patsy==0.5.2
+pbr==5.11.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
 platformdirs==2.5.2
 pluggy==1.0.0
 portalocker==2.5.1
+prettytable==3.5.0
 proglog==0.1.10
 prometheus-client==0.8.0
 promise==2.3
@@ -122,7 +133,9 @@ Pygments==2.7.1
 PyOpenGL==3.1.5
 PyOpenGL-accelerate==3.1.5
 pyparsing==3.0.9
+pyperclip==1.8.2
 pyrsistent==0.18.1
+pytest==7.1.3
 python-dateutil==2.8.2
 pytorch-lightning==1.6.5
 pytorch-ranger==0.1.1
@@ -137,7 +150,7 @@ requests-oauthlib==1.3.1
 rsa==4.9
 ruck==0.2.4
 scikit-learn==1.1.1
-scipy==1.9.0
+scipy==1.8.1
 seaborn==0.11.2
 seeding==0.1.0
 Send2Trash==1.5.0
@@ -147,7 +160,9 @@ shortuuid==1.0.9
 shtab==1.5.5
 six==1.16.0
 smmap==5.0.0
+SQLAlchemy==1.4.44
 statsmodels==0.13.2
+stevedore==4.1.1
 submitit==1.4.5
 tabulate==0.8.10
 tensorboard==2.9.1
@@ -159,7 +174,7 @@ testpath==0.4.4
 threadpoolctl==3.1.0
 tldr==3.1.0
 tomli==2.0.1
-torch==1.12.0+cu113
+torch==1.11.0+cu113
 torch-optimizer==0.3.0
 torchmetrics==0.9.3
 torchvision==0.13.0+cu113
