Split rep_ & rl_learning_rate configs

--- a/factored_rl/experiments/conf/trainer/rl.yaml
+++ b/factored_rl/experiments/conf/trainer/rl.yaml
@@ -4,7 +4,7 @@ defaults:
 
 name: rl
 batch_size: 32
-learning_rate: 0.001
+rl_learning_rate: 0.001
 optimizer:
   _target_: torch.optim.Adam
   _partial_: true
