--- a/factored_rl/experiments/conf/trainer/rep.yaml
+++ b/factored_rl/experiments/conf/trainer/rep.yaml
@@ -4,7 +4,7 @@ defaults:
 
 name: rep
 batch_size: 128
-learning_rate: 0.001
+rep_learning_rate: 0.001
 log_every_n_steps: 50
 max_steps: 2000
 num_dataloader_workers: 2
