Add additional MLPs for qnet and pre/post WM

--- a/factored_rl/experiments/conf/model/cnn_relu.yaml
+++ b/factored_rl/experiments/conf/model/cnn_relu.yaml
@@ -14,4 +14,11 @@ cnn:
 mlp:
   activation:
     - _target_: torch.nn.ReLU
+  final_activation:
+    - _target_: torch.nn.Tanh
+qnet:
+  n_hidden_layers: 1
+  n_units_per_layer: 64
+  activation:
+    - _target_: torch.nn.ReLU
   final_activation: null
